--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -784,8 +784,8 @@ a.ui-button:active, .ui-button:active,
 }
 
 .wpo-breadcumb-area {
-  
-  min-height: 400px;
+
+  min-height: 300px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -798,7 +798,7 @@ a.ui-button:active, .ui-button:active,
   -ms-flex-direction: column;
   flex-direction: column;
   z-index: 1;
-  padding: 150px 0 0 0;
+  padding: 0 0 0 0;
 }
 
 @media (max-width: 767px) {
@@ -4927,6 +4927,10 @@ a.ui-button:active, .ui-button:active,
   margin-top: 5px;
 }
 
+.wpo-destination-area .destination-wrap .destination-item .destination-content h2{
+  font-size: 32px;
+}
+
 @media (max-width: 1400px) {
   .wpo-destination-area .destination-wrap .destination-item .destination-content h2,
   .wpo-destination-area-s2 .destination-wrap .destination-item .destination-content h2 {
@@ -5263,6 +5267,7 @@ a.ui-button:active, .ui-button:active,
   -webkit-transition: all .3s;
   transition: all .3s;
   height: 220px;
+  width: 100%;
 }
 
 .wpo-room-area .room-wrap .room-item:hover .room-img img,
@@ -7457,7 +7462,7 @@ a.ui-button:active, .ui-button:active,
   box-shadow: 0px 10px 40px 0px rgba(50, 50, 50, 0.1);
   padding: 20px;
   margin-top: 30px;
-  margin-right: -100px;
+  margin-right:0;
   position: relative;
   z-index: 9;
   background: #fff;
@@ -12040,7 +12045,6 @@ a.ui-button:active, .ui-button:active,
 
 .old_price{
   overflow: auto;
-  min-height: 250px;
   border-left: 1px solid #eee;
   padding: 20px;
   text-align: center;
@@ -12061,6 +12065,7 @@ a.ui-button:active, .ui-button:active,
 
 .old_price label{
   display: block;
+  margin: 0 0 15px 0;
 }
 
 
@@ -12778,6 +12783,14 @@ body.st_zoom .listar-navigation > ul > li {
   }
 
 
+}
+
+.img-main-tours{
+  height: 200px;
+}
+
+.img-main-tours img{
+  min-height:100%;
 }
 
 @media (max-width: 767px) {
